[tool.poetry]
name = "commands-base"
version = "2.0.0"
description = "Aladdin base docker image for commands containers"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
verboselogs = "^1.7"
coloredlogs = "^14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
